[gd_scene load_steps=22 format=3 uid="uid://c4qtnv0yc6xbc"]

[ext_resource type="Script" path="res://src/mobs/skullV3/skull.gd" id="1_tvcbw"]
[ext_resource type="PackedScene" uid="uid://cbjct27e5ltw8" path="res://src/mobs/skullV3/skull-corpse.tscn" id="2_7rvi8"]
[ext_resource type="ArrayMesh" uid="uid://wt7uasao65hi" path="res://assets/mobs/skull/skull.obj" id="3_88xph"]
[ext_resource type="Texture2D" uid="uid://dyp6q8lq06mye" path="res://assets/mobs/textures/skull.png" id="4_y8fko"]
[ext_resource type="Script" path="res://src/mobs/skullV3/states/SkullStateMachine.gd" id="5_bc70w"]
[ext_resource type="Script" path="res://src/mobs/skullV3/states/Idle.gd" id="6_j4mbe"]
[ext_resource type="Script" path="res://src/mobs/skullV3/states/Attack.gd" id="7_gx7ei"]
[ext_resource type="Script" path="res://src/mobs/skullV3/states/Chase.gd" id="7_s12it"]
[ext_resource type="Script" path="res://src/mobs/Vision.gd" id="8_cy8g6"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y1icr"]
resource_local_to_scene = true
albedo_texture = ExtResource("4_y8fko")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_h40ip"]

[sub_resource type="BoxShape3D" id="BoxShape3D_vqu8t"]
size = Vector3(2.25, 2.5, 0.6)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_2ppko"]
points = PackedVector3Array(-8, -12, 0, -7.39233, -12, -3.06186, -7.39233, -12, 3.0603, 0, 12, 0, -5.65701, -12, -5.65701, -5.65701, -12, 5.65544, 7.39076, -12, 3.0603, 8, -12, 0, 7.39076, -12, -3.06186, 5.65544, -12, -5.65701, 3.0603, -12, -7.39233, 0, -12, -8, -3.06186, -12, -7.39233, -3.06186, -12, 7.39076, 0, -12, 8, 3.0603, -12, 7.39076, 5.65544, -12, 5.65544)

[sub_resource type="SphereShape3D" id="SphereShape3D_r12ek"]
radius = 7.5

[sub_resource type="CylinderShape3D" id="CylinderShape3D_o3prm"]
height = 0.5
radius = 1.5

[sub_resource type="Animation" id="Animation_ad6wh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackArea:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, -1.65)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 3.14159, 0)]
}

[sub_resource type="Animation" id="Animation_3mff8"]
resource_name = "attack"
length = 0.70001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.75), Vector3(0, 0, -1.12485), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackArea:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.7, 0.70001),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, -1.65), Vector3(0, 0, -1.65), Vector3(0, 0, -3.25), Vector3(0, 0, -1.65), Vector3(0, 0, -1.65)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 3.14159, 0), Vector3(-0.523599, 3.14159, 5.04735e-08), Vector3(0.785398, 3.14159, 0), Vector3(0, 3.14159, 0)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("StateMachine/Attack")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hit"
}]
}

[sub_resource type="Animation" id="Animation_7gekn"]
resource_name = "attack_windup"
length = 0.40001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.2, 0, 0), Vector3(0.2, 0, 0), Vector3(-0.2, 0, 0), Vector3(0.2, 0, 0), Vector3(-0.2, 0, 0), Vector3(0.2, 0, 0), Vector3(-0.2, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_73sa3"]
resource_name = "full_attack"
length = 1.50001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.8, 0.9, 1.1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.4, 0, 0), Vector3(-0.4, 0, 0), Vector3(0.4, 0, 0), Vector3(-0.4, 0, 0), Vector3(0.4, 0, 0), Vector3(-0.4, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0.75), Vector3(0, 0, -1.12485), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackArea:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8, 0.9, 1.1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, -1.65), Vector3(0, 0, -1.65), Vector3(0, 0, -3.25), Vector3(0, 0, -1.65)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8, 0.9, 1.1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 3.14159, 0), Vector3(0, 3.14159, 0), Vector3(-0.523599, 3.14159, 5.04735e-08), Vector3(0.785398, 3.14159, 0), Vector3(0, 3.14159, 0)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("StateMachine/Attack")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hit"
}]
}

[sub_resource type="Animation" id="Animation_bksb5"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.130402, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lttpq"]
_data = {
"RESET": SubResource("Animation_ad6wh"),
"attack": SubResource("Animation_3mff8"),
"attack_windup": SubResource("Animation_7gekn"),
"full_attack": SubResource("Animation_73sa3"),
"idle": SubResource("Animation_bksb5")
}

[node name="Skull" type="CharacterBody3D" groups=["creatures", "mobs"]]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0, 0)
collision_layer = 36
collision_mask = 33
script = ExtResource("1_tvcbw")
SPEED = 125.0
corpse_scene = ExtResource("2_7rvi8")

[node name="Body" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 0, 2.53518e-06, 0, 0.999999, 0, -2.53518e-06, 0, -0.999999, 0, 0, 0)
mesh = ExtResource("3_88xph")
surface_material_override/0 = SubResource("StandardMaterial3D_y1icr")

[node name="CollisionLegs" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.472966, 0.106558)
shape = SubResource("CapsuleShape3D_h40ip")

[node name="CollisionBody" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0648299, 0.106558)
shape = SubResource("BoxShape3D_vqu8t")
disabled = true

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("animation_player", "vision", "navigation_agent")]
script = ExtResource("5_bc70w")
initial_state = NodePath("Idle")
animation_player = NodePath("../AnimationPlayer")
vision = NodePath("../Vision")
navigation_agent = NodePath("../NavigationAgent3D")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("6_j4mbe")

[node name="Chase" type="Node" parent="StateMachine"]
script = ExtResource("7_s12it")

[node name="UpdateTimer" type="Timer" parent="StateMachine/Chase"]

[node name="Attack" type="Node" parent="StateMachine" node_paths=PackedStringArray("attack_area")]
script = ExtResource("7_gx7ei")
attack_area = NodePath("../../AttackArea")

[node name="Vision" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 38
script = ExtResource("8_cy8g6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Vision"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -12)
shape = SubResource("ConvexPolygonShape3D_2ppko")

[node name="RayCast3D" type="RayCast3D" parent="Vision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.296314)
target_position = Vector3(0, 0, -30)
collision_mask = 39

[node name="Timer" type="Timer" parent="Vision"]
wait_time = 0.1
autostart = true

[node name="Proximity" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 38
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Proximity"]
shape = SubResource("SphereShape3D_r12ek")

[node name="AttackArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.999999, 0, 0, 0, 0.999999, 0, 0, -1.65)
collision_layer = 0
collision_mask = 38
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackArea"]
shape = SubResource("CylinderShape3D_o3prm")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lttpq")
}

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
target_desired_distance = 1.5
path_max_distance = 20.01
avoidance_enabled = true

[node name="RotationHelper" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)

[connection signal="allegiance_changed" from="." to="StateMachine" method="_on_skull_allegiance_changed"]
[connection signal="allegiance_changed" from="." to="Vision" method="_on_skull_allegiance_changed"]
[connection signal="damage_received" from="." to="StateMachine" method="_on_skull_damage_received"]
[connection signal="timeout" from="StateMachine/Chase/UpdateTimer" to="StateMachine/Chase" method="_on_update_timer_timeout"]
[connection signal="body_detected" from="Vision" to="StateMachine/Idle" method="_on_vision_body_detected"]
[connection signal="timeout" from="Vision/Timer" to="Vision" method="_on_timer_timeout"]
[connection signal="body_entered" from="Proximity" to="StateMachine/Idle" method="_on_proximity_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/Attack" method="_on_animation_player_animation_finished"]
[connection signal="target_reached" from="NavigationAgent3D" to="StateMachine/Chase" method="_on_navigation_agent_3d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="StateMachine/Chase" method="_on_navigation_agent_3d_velocity_computed"]
